--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <button id="eraser-btn">Eraser</button>
     <input type="file" accept="image/*" id="file">
     <input type="text" placeholder="Write and then double click" id="text"/>
+    <button id="save">Save Image</button>
     <script src="app.js"></script>
 </body>
 </html>
